[tool.poetry]
name = "posts"
version = "0.1.0"
description = ""
authors = ["Ben Cunningham <benjamescunningham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
