[tool.poetry]
name = "posts"
version = "0.1.0"
description = ""
authors = ["Ben Cunningham <benjamescunningham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
pylint = "^3.1.0"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "posts"
known_local_folder = "tests"
lines_after_imports = 2
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
